Add fiscal ticket generation and AFIP integration
Introduces fiscal ticket (electronic invoice) generation via AFIP, including new DTOs and enums for invoice/document types and IVA conditions. Refactors ticket types, updates controller endpoints for pre-ticket and fiscal ticket generation, and adds kitchen ticket listener improvements. Removes unused BillingService and updates ticket builder logic to support new ticket formats and CAE handling.